--- a/gb/20/10/30/n12512511.md
+++ b/gb/20/10/30/n12512511.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yfvdmz376/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yfvdmz376/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yfvdmz376/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yfvdmz376/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yfvdmz376/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yfvdmz376/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yfvdmz376/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yfvdmz376/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yfvdmz376/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yfvdmz376/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yfvdmz376/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yfvdmz376/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yfvdmz376/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yfvdmz376/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yfvdmz376/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>旧金山扛过疫情 但经济代价巨大</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>旧金山进入重启 但长期封闭经济代价巨大</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1225860699-600x400.jpg" />
 <h6>自3月1日以来，大约每100家企业，就有一家永久关闭。图为旧金山一家居家用品店“1号码头”（Pier 1 ）张贴告示，宣布关闭全美540家分店。(Justin Sullivan/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年10月30日讯】（大纪元记者周凤临综合报导）鉴于新增<ahref="https://github.com/yfvdmz376/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎，COVID-19）确诊病例维持在很低的水平，<ahref="https://github.com/yfvdmz376/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>率先进入加州重启阶段，但由于旧金山是率先实施经济停摆、居家防疫的城市，而且重启比其它地方更缓慢，这对旧金山的经济造成巨大冲击，包括对<ahref="https://github.com/yfvdmz376/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8%E4%B8%9A.md#1">旅游业</a>、<ahref="https://github.com/yfvdmz376/djy/blob/master/gb/tag/%E9%AB%98%E7%A7%91%E6%8A%80%E4%B8%9A.md#1">高科技业</a>这些旧金山的主要商业的冲击。目前为疫情付出的经济代价已经可以感受和触及到，更具体的数字尚待进一步揭晓。</p>
-<p><ahref="https://github.com/yfvdmz376/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>市长<ahref="https://github.com/yfvdmz376/djy/blob/master/gb/tag/%E5%B8%83%E9%87%8C%E5%BE%B7.md#1">布里德</a>（London Breed）上星期宣布，从10月27日（周二）起，旧金山将率先进入下一阶段经济开放，更多人允许回到办公室工作、可以在餐馆室内堂吃，博物馆也开门了，很快还将开放酒吧室外营业。</p>
-<p>今年3月，面对即将来临的<ahref="https://github.com/yfvdmz376/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>疫情，旧金山联合湾区其它5县，率先实施了停摆经济、仅允许基础行业运作的居家防疫措施；当疫情缓解之时，旧金山比其它地区，采取更保守的开放步骤，餐馆、健身房和理发店、沙龙的开放，比临县相对更晚。</p>
+	<p>【大纪元2020年10月30日讯】（大纪元记者周凤临综合报导）鉴于新增<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（武汉肺炎，COVID-19）确诊病例维持在很低的水平，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>率先进入加州重启阶段，但由于旧金山是率先实施经济停摆、居家防疫的城市，而且重启比其它地方更缓慢，这对旧金山的经济造成巨大冲击，包括对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8%E4%B8%9A.md#1">旅游业</a>、<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%AB%98%E7%A7%91%E6%8A%80%E4%B8%9A.md#1">高科技业</a>这些旧金山的主要商业的冲击。目前为疫情付出的经济代价已经可以感受和触及到，更具体的数字尚待进一步揭晓。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>市长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B8%83%E9%87%8C%E5%BE%B7.md#1">布里德</a>（London Breed）上星期宣布，从10月27日（周二）起，旧金山将率先进入下一阶段经济开放，更多人允许回到办公室工作、可以在餐馆室内堂吃，博物馆也开门了，很快还将开放酒吧室外营业。</p>
+<p>今年3月，面对即将来临的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>疫情，旧金山联合湾区其它5县，率先实施了停摆经济、仅允许基础行业运作的居家防疫措施；当疫情缓解之时，旧金山比其它地区，采取更保守的开放步骤，餐馆、健身房和理发店、沙龙的开放，比临县相对更晚。</p>
 <p>仅从防疫角度来看，旧金山这个人口近90万的大城市，仅有12,200个确诊病例、145个死亡病例，死亡率在全美国来看也是较低的；南加州的长滩（Long Beach）市，人口仅为旧金山的一半左右，但染疫人数，比旧金山多出超过900多例，死亡人数多100多例。</p>
 <p>但这个防疫成绩，付出的经济代价，如今在旧金山街头，就可以感受到。</p>
 <p>最大的冲击，莫过于旧金山的各大高科技公司，在疫情下，不得不允许员工在家办公。也就是说，员工可以在任何地点联网工作。这导致许多高科技公司员工，离开高价的出租公寓，有的举家搬到可以减少彼此接触的郊外独立屋，有的趁这个机会四处旅游。</p>
@@ -21,54 +21,50 @@
 <p>从夏季开始，旧金山出租、出售的标牌，越来越常见，价格更是骤降。旧金山房租价格，一卧室的公寓，中位月租已经降低到2,800美元。一到周末，经常可以看见搬家的车子。</p>
 <p>从另外一个指标上，也可以看出疫情对旧金山的冲击。根据旧金山本月初发布的市府报告，居家防疫期间，加州许多城市由于在线订货增多，在线销售税大幅上涨，而在旧金山则几乎持平。</p>
 <p>在疫情之前，旧金山租房市场空前繁荣，一个房子会有许多人争着租。但眼下，房东们不得不为租客提供一些优惠，在Coldwell工作的银行业者尼克．陈，最近就把以前月租可以到4,300美元的一居室房子，以3,150美元的月租租出去。</p>
-<p>陈说，旧金山房租，在过去数年内涨得太厉害，以后房租可能会回调，但是否能回到以前的水平，可能不会了。◇</p>
-<p>注：新冠状病毒，也称武汉肺炎病毒，大纪元认为叫“<ahref="https://github.com/yfvdmz376/djy/blob/master/gb/tag/%e4%b8%ad%e5%85%b1%e7%97%85%e6%af%92.md#1">中共病毒</a>”更准确。因该病毒来自中共统治下的中国，更因中共掩盖疫情导致病毒向全世界扩散，并造成全球大流行。</p>
+<p>陈说，旧金山房租，在过去数年内涨得太厉害，以后房租可能会回调，但是否能回到以前的水平，可能不会了。◇#</p>
+<p>注：新冠状病毒，也称武汉肺炎病毒，大纪元认为叫“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%e4%b8%ad%e5%85%b1%e7%97%85%e6%af%92.md#1">中共病毒</a>”更准确。因该病毒来自中共统治下的中国，更因中共掩盖疫情导致病毒向全世界扩散，并造成全球大流行。</p>
 <p><b><a style="color: #3339ff;" href="https://www.facebook.com/sfdjy/">关注我们facebook主页，及时获得更多资讯，请点这里。</a></b></p>
 <p>责任编辑：陈柏州</p>
-<div></div>
-<div></div>
-<div></div>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/15/n12476964.md#1">旧金山本周三开始 游乐场重新开放</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/20/n12489226.md#1">旧金山公寓租金下跌31% 降幅居全美之冠</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/21/n12490460.md#1">旧金山进入“黄色”层级 下周二将开放办公室</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/22/n12492974.md#1">旧金山学监：校园年底前不开</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/10/15/n12476964.md#1">旧金山本周三开始 游乐场重新开放</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/10/20/n12489226.md#1">旧金山公寓租金下跌31% 降幅居全美之冠</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/10/21/n12490460.md#1">旧金山进入“黄色”层级 下周二将开放办公室</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/10/22/n12492974.md#1">旧金山学监：校园年底前不开</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/8/n10371607.md#1" target="_blank">共产党暴政录：三反五反运动</a></li><li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/28/n11751711.md#1" target="_blank">张林：青少年被迫加入抗美援朝志愿军</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/9/30/n12442831.md#1">《圣经》与《推背图》预言的应验与变换3</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/9/30/n12442832.md#1">《圣经》与《推背图》预言的应验与变换4</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/8/10/n12318958.md#1">【命理】怎样才能知道自己是做生意的命？</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/29/n12511487.md#1">皮肤干燥发痒？一碗银耳汤解秋燥 润肤抗老</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/29/n12511883.md#1">【远见快评】川普胜选3大理由 蓬佩奥突访越南</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/29/n12510015.md#1">【西岸观察】川普政府内鬼现身 拜登阵营分裂</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/28/n12509051.md#1">CEO提供不实证词后 推特解封《纽邮》账户</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/28/n12508576.md#1">【一线采访】上海浦东现疫情 管控全面升级</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/28/n12507118.md#1">【重播】FBI：逮捕5人 中共猎狐行动令人发指</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/27/n12504715.md#1">TWICE盼为粉丝带来力量 正规二辑32区iTunes夺冠</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/27/n12504942.md#1">袁惟仁惊传跌倒再陷昏迷 住进加护病房</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/27/n12506472.md#1">朱茵开工过49岁生日 获黄贯中隔空送歌贺寿</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/28/n12509127.md#1">过世父亲留下百亿家产 黄子韬频晒奢侈品惹议</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/29/n12509968.md#1">主人忘记带走 小狗花26天走60多公里回家</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/23/n12496965.md#1">心悸、胃胀是驼背惹的祸 端正姿势预防一身病</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/27/n12506567.md#1">10个天然方法 补充体内快乐物质 忧郁焦虑一扫光</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/28/n12507771.md#1">前3次大选预测都准 “候选人饼干”看好川普</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yfvdmz376/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yfvdmz376/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/30/n12512511.htm">旧金山扛过疫情 但经济代价巨大</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/30/n12512511.htm">旧金山进入重启 但长期封闭经济代价巨大</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yfvdmz376/djy/blob/master/gb/20/10/30/n12512511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yfvdmz376/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yfvdmz376/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yfvdmz376/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yfvdmz376/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yfvdmz376/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/10/30/n12512511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
